fix(styling): properly align flexbox ms-select icon+text vertically

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -797,6 +797,7 @@ $ms-ok-button-text-hover-color:                             $slick-multiselect-o
 $ms-select-all-label-hover-border:                          $slick-multiselect-select-all-label-hover-border;
 $ms-select-all-label-padding:                               $slick-multiselect-select-all-padding;
 $ms-select-all-label-span-padding:                          $slick-multiselect-select-all-label-padding;
+$ms-select-all-line-height:                                 $slick-multiselect-select-all-line-height;
 $ms-select-all-text-color:                                  $slick-multiselect-select-all-text-color;
 
 /* pagination variables */
